fix close button alignment on ContactPage

--- a/files/css/ContactPage/Page.css
+++ b/files/css/ContactPage/Page.css
@@ -18,6 +18,7 @@
 .ContactPage_Page-frame {
     display: inline-block;
     vertical-align: middle;
+    position: relative;
     width: 300px;
     background-color: white;
     padding: 20px;
